--- a/PPl3/PPl3.csproj
+++ b/PPl3/PPl3.csproj
@@ -559,6 +559,9 @@
     <Content Include="Areas\Admin\Views\HomeAdmin\invoice.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\userPersonalProfile.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\BanUser.cshtml" />
+    <Content Include="Areas\User\Views\Cancel.cshtml" />
+    <Content Include="Areas\User\Views\HomeUser\cancel.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\GenerateQRCode.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -566,8 +569,6 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\User\Views\Cancel.cshtml" />
-    <Content Include="Areas\User\Views\HomeUser\cancel.cshtml" />
     <None Include="Properties\PublishProfiles\hosithao-001-site1 - FTP1.pubxml" />
     <None Include="Properties\PublishProfiles\hosithao-001-site1 - Web Deploy1.pubxml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
